<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListSelect">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_currency1" />

            <Spinner
                android:id="@+id/spinnerFirstCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_currency2" />

            <Spinner
                android:id="@+id/spinnerSecondCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_currency1" />

            <EditText
                android:id="@+id/editTextFirstCurrencyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:ems="5"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_currency2" />

            <EditText
                android:id="@+id/editTextSecondCurrencyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:ems="5"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonClear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="42dp"
                android:layout_weight="1"
                android:text="@string/btn_clear" />

            <Button
                android:id="@+id/buttonConvert2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="42dp"
                android:layout_weight="1"
                android:text="@string/btn_convert" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>